--- a/webserver/templates/track.html
+++ b/webserver/templates/track.html
@@ -41,7 +41,7 @@
 
 <body>
   <p>Tracking Current Position: </p>
-  <object id="map" data="static/images/lund-map2.svg" type="image/svg+xml" ></object>
+  <object id="map" data="static/images/lund-map.svg" type="image/svg+xml" ></object>
   <script>
     var set_delay = 50,
     callout = function () {
